[~] Реализован метод регистрации волонтеров для Admin, методы getDialogMsgs и sendMsg для Global. [~] Перехли на версию API 1.3.0
