# controllers/Global.js
@@ -1,13 +1,13 @@
 'use strict';
 
-var utils = require('../utils/writer.js');
-var Global = require('../service/GlobalService');
+const utils = require('../utils/writer.js');
+const Global = require('../service/GlobalService');
 
 module.exports.publicGetImg = function publicGetImg (req, res, next) {
-    var imgName = req.swagger.params['imgName'].value;
+    const imgName = req.swagger.params['imgName'].value;
     Global.publicGetImg(imgName)
         .then(function (response) {
-            var img = require('fs').readFileSync(response);
+            const img = require('fs').readFileSync(response);
             res.writeHead(200, {'Content-Type': 'image/png' });
             res.end(img, 'binary');
         })
@@ -17,7 +17,7 @@ module.exports.publicGetImg = function publicGetImg (req, res, next) {
 };
 
 module.exports.getDialogInfo = function getDialogInfo (req, res, next) {
-  var body = req.swagger.params['body'].value;
+  const body = req.swagger.params['body'].value;
   Global.getDialogInfo(body)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -27,7 +27,7 @@ module.exports.getDialogInfo = function getDialogInfo (req, res, next) {
     });
 };
 module.exports.getDialogMsgs = function getDialogMsgs (req, res, next) {
-  var body = req.swagger.params['body'].value;
+  const body = req.swagger.params['body'].value;
   Global.getDialogMsgs(body)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -38,7 +38,7 @@ module.exports.getDialogMsgs = function getDialogMsgs (req, res, next) {
 };
 
 module.exports.getLastMsg = function getLastMsg (req, res, next) {
-  var body = req.swagger.params['body'].value;
+  const body = req.swagger.params['body'].value;
   Global.getLastMsg(body)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -49,7 +49,7 @@ module.exports.getLastMsg = function getLastMsg (req, res, next) {
 };
 
 module.exports.sendMsg = function sendMsg (req, res, next) {
-  var body = req.swagger.params['body'].value;
+  const body = req.swagger.params['body'].value;
   Global.sendMsg(body)
     .then(function (response) {
       utils.writeJson(res, response);
@@ -57,15 +57,4 @@ module.exports.sendMsg = function sendMsg (req, res, next) {
     .catch(function (response) {
       utils.writeJson(res, response);
     });
-};
-
-module.exports.newMethod = function newMethod (req, res, next) {
-    var body = req.swagger.params['body'].value;
-    Global.sendMsg(body)
-        .then(function (response) {
-            utils.writeJson(res, response);
-        })
-        .catch(function (response) {
-            utils.writeJson(res, response);
-        });
 };
